--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           github_user_name: ahmadhabb
           outputs: |
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#1DA1F2
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#EBF4DD
 
       - name: Add timestamp
         run: |
@@ -34,7 +34,7 @@ jobs:
           sed -i "s|<span id=\"date\">.*</span>|<span id=\"date\">${CURRENT_DATE}</span>|" README.md
 
       - name: Push to output branch
-        uses: crazy-max/ghaction-github-pages@v3
+        uses: ahmadhabb/ghaction-github-pages@v3
         with:
           target_branch: output
           build_dir: dist
