--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,8 +2,11 @@ name: Generate Snake with Date
 
 on:
   schedule:
-    - cron: "0 0 * * *" 
-  workflow_dispatch:
+    - cron: "0 0 * * *" # Berjalan otomatis setiap jam 12 malam
+  workflow_dispatch: # Memungkinkan Anda menjalankan manual dari tab Actions
+  push:
+    branches:
+      - main
 
 permissions:
   contents: write
@@ -15,45 +18,35 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      # 1. Generate animasi snake berdasarkan kontribusi ahmadhabb
       - name: Generate snake animation
         uses: Platane/snk@v3
         with:
           github_user_name: ahmadhabb
           outputs: |
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#EBF4DD
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#1DA1F2
 
-      - name: Add timestamp
-        run: |
-          mkdir -p ./dist
-          sudo chmod -R 777 ./dist
-          echo "🗓️ $(date '+%B %Y')" > ./dist/date.txt
-
-      - name: Update date in README
-        run: |
-          CURRENT_DATE=$(date +"%B %Y")
-          sed -i "s|<span id=\"date\">.*</span>|<span id=\"date\">${CURRENT_DATE}</span>|" README.md
-
-      - name: Push to output branch
-        uses: ahmadhabb/ghaction-github-pages@v3
+      # 2. Push file SVG ke branch 'output' agar bisa dipanggil sebagai gambar
+      - name: Push snake to output branch
+        uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
           build_dir: dist
         env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
-  
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # 3. Update tanggal di README.md pada branch 'main'
       - name: Update date in README
         run: |
           CURRENT_DATE=$(date +"%B %Y")
           echo "Updating date to $CURRENT_DATE"
 
-          # Set identity for commit
           git config --local user.name "github-actions[bot]"
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
-          # Replace date text
+          # Mengganti teks di dalam <span id="date">...</span> dengan bulan & tahun saat ini
           sed -i 's|<span id="date">[^<]*</span>|<span id="date">'"$CURRENT_DATE"'</span>|' README.md
 
-          # Commit & push
           git add README.md
-          git commit -m "Update date automatically: ${CURRENT_DATE}" || echo "No changes"
-          git push
+          git commit -m "chore: update contribution date [skip ci]" || echo "No changes to commit"
+          git push origin main
