--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           github_user_name: ahmadhabb
           outputs: |
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#1DA1F2
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#BF124D
 
       # 2. Push file SVG ke branch 'output' agar bisa dipanggil sebagai gambar
       - name: Push snake to output branch
